Make CR simulations work, incl. conf file and stats

--- a/cr.cfg
+++ b/cr.cfg
@@ -1,12 +1,12 @@
-NODES                    52
+NODES                    1000
 CYCLE                    100000
-BLOCKS                   52
+BLOCKS                   1000
 
 EXTRA_TCP_TRIPS          3
 TH                       5   # msec to process header
 TB                       45  # msec to process body
 
-SPOT_LATENCY             0   # latency between nodes at same location (msec)
+SPOT_LATENCY             2   # latency between nodes at same location (msec)
 
 C                        5  # 5
 R                        5  # 10-C
@@ -24,13 +24,12 @@ network.size             NODES
 ###################################
 
 
-protocol.diss            cr.Dissemination
+protocol.diss            prot.DisseminationFixed
 {
   peer                   Peer
 
-  headerProcessing       TH
-  bodyProcessing         TB
-
+  header_validation_time TH
+  body_validation_time   TB
   extra_tcp_trips        EXTRA_TCP_TRIPS              
 
   transport              cardano
@@ -52,22 +51,22 @@ transport.cardano        TransportDeltaQ
 #   INITIALIZERS   #
 ####################
 
-#include.init             latencies_matrix, cr_init
-include.init             latencies_matrix, static_topo
+include.init             latencies_matrix, cr_init
+#include.init             latencies_matrix, static_topo
 #include.init             wireCRPeers
 
 
 init.latencies_matrix    MatrixParser
 {
-  #file                   cardano_latencies_matrix
-  file                   cardano_latencies.dat
+  file                   wondernetwork_latencies.dat
+  #file                   iohk_testbed_latencies.dat
   trace_ticks_per_sec    1000
   ticks_per_sec          1000
   min                    SPOT_LATENCY
 }
 
 
-init.cr_init             cr.InitializerCR
+init.cr_init             prot.InitializerCR
 {
   protocol               diss
   c                      C
@@ -129,4 +128,3 @@ control.degree          peernet.reports.DegreeStats
   #undir
   method                freq
 }
-          
