--- a/perigee.cfg
+++ b/perigee.cfg
@@ -1,6 +1,7 @@
 NODES                    1000
-CYCLE                    100000
-BLOCKS                   1000
+CYCLE                    100000   # One block per cycle
+ROUND                    100      # One calibration per round (counted in cycles)
+BLOCKS                   12800
 
 EXTRA_TCP_TRIPS          3
 TH                       5   # msec to process header
@@ -8,10 +9,9 @@ TB                       45  # msec to process body
 
 SPOT_LATENCY             2   # latency between nodes at same location (msec)
 
-C                        4
-R                        4
+D                        8   # Degree
 
-LOGFILE                  cr
+LOGFILE                  prg
 engine.mode              sim
 #engine.duration          0
 random.seed              0
@@ -24,15 +24,21 @@ network.size             NODES
 ###################################
 
 
-protocol.diss            prot.CR
+protocol.diss            prot.Perigee
 {
   peer                   Peer
 
+  step                   ROUND * CYCLE     # calibration period, through nextCycle()
+
   header_validation_time TH
   body_validation_time   TB
-  extra_tcp_trips        EXTRA_TCP_TRIPS              
+  extra_tcp_trips        EXTRA_TCP_TRIPS
 
-  transport              cardano
+  outgoing               D
+  incoming               20
+  round                  100               # every how many block to calibrate
+
+  transport              deltaQ
 }
 
 
@@ -41,7 +47,7 @@ protocol.diss            prot.CR
 #   TRANSPORT   #
 #################
 
-transport.cardano        TransportDeltaQ
+transport.deltaQ         TransportDeltaQ
 
 
 
@@ -51,7 +57,7 @@ transport.cardano        TransportDeltaQ
 #   INITIALIZERS   #
 ####################
 
-include.init             latencies_matrix, cr_init
+include.init             latencies_matrix
 #include.init             latencies_matrix, static_topo
 #include.init             wireCRPeers
 
@@ -65,7 +71,6 @@ init.latencies_matrix    MatrixParser
   min                    SPOT_LATENCY
 }
 
-
 init.cr_init             prot.InitializerCR
 {
   protocol               diss
@@ -73,24 +78,10 @@ init.cr_init             prot.InitializerCR
   r                      R
 }
 
-init.static_topo         cr.InitializerStatic
+init.prg_init            prot.InitializerPRG
 {
   protocol               diss
-  topology               topology.dat
-}
-
-
-
-# edgeOrientation:
-# direct (pushBased)
-# revert (subscriptionBased)
-# bidirectional
-
-init.wireCRPeers      VParser
-{
-  protocol            diss
-  edgeOrientation     subscriptionBased
-  crsDegrees          5_5_0
+  r                      R
 }
 
 
@@ -109,12 +100,14 @@ control.mining          BlockGeneration
 {
   protocol              diss
   step                  CYCLE
+  skip                  ROUND
   blocks                BLOCKS
 }
 
 control.stats           Stats
 {
   protocol              diss
+  step                  ROUND * CYCLE
   final
 }
 
