Enable configurable number of weakest links to replace in Perigee

--- a/perigee.cfg
+++ b/perigee.cfg
@@ -36,6 +36,7 @@ protocol.diss            prot.Perigee
 
   outgoing               D
   incoming               20
+  weakest_links          2
   round                  100               # every how many block to calibrate
 
   transport              deltaQ
