--- a/cr.cfg
+++ b/cr.cfg
@@ -10,6 +10,8 @@ SPOT_LATENCY             2   # latency between nodes at same location (msec)
 
 C                        4
 R                        4
+CD                       0   # How many of the close links should be downstream
+RD                       0   # How many of the random links should be downstream
 
 LOGFILE                  cr
 engine.mode              sim
@@ -71,6 +73,8 @@ init.cr_init             prot.InitializerCR
   protocol               diss
   c                      C
   r                      R
+  c_down                  CD
+  r_down                  RD
 }
 
 init.static_topo         cr.InitializerStatic
