--- a/perigee.cfg
+++ b/perigee.cfg
@@ -3,13 +3,14 @@ CYCLE                    100000   # One block per cycle
 ROUND                    100      # One calibration per round (counted in cycles)
 BLOCKS                   12800
 
-EXTRA_TCP_TRIPS          3
-TH                       5   # msec to process header
-TB                       45  # msec to process body
+EXTRA_TCP_TRIPS          0
+TH                       0   # msec to process header
+TB                       0   # msec to process body
 
 SPOT_LATENCY             2   # latency between nodes at same location (msec)
 
 D                        8   # Degree
+W                        2   # How many weakest links to replace
 
 LOGFILE                  prg
 engine.mode              sim
@@ -24,7 +25,7 @@ network.size             NODES
 ###################################
 
 
-protocol.diss            prot.Perigee
+protocol.diss            prot.PerigeeRewardFirst
 {
   peer                   Peer
 
@@ -36,8 +37,8 @@ protocol.diss            prot.Perigee
 
   outgoing               D
   incoming               20
-  weakest_links          2
-  round                  100               # every how many block to calibrate
+  weakest_links          W
+  round                  ROUND             # every how many blocks to calibrate
 
   transport              deltaQ
 }
