Add support for individual stats per miner

--- a/cr.cfg
+++ b/cr.cfg
@@ -8,8 +8,8 @@ TB                       45  # msec to process body
 
 SPOT_LATENCY             2   # latency between nodes at same location (msec)
 
-C                        4
-R                        4
+C                        8
+R                        8
 CD                       0   # How many of the close links should be downstream
 RD                       0   # How many of the random links should be downstream
 
@@ -60,7 +60,8 @@ include.init             latencies_matrix, cr_init
 
 init.latencies_matrix    MatrixParser
 {
-  file                   wondernetwork_latencies.dat
+  file                   wondernetwork_latencies_oneway_2022-02-08.dat
+  #file                   wondernetwork_latencies.dat
   #file                   iohk_testbed_latencies.dat
   trace_ticks_per_sec    1000
   ticks_per_sec          1000
