--- a/perigee_first.cfg
+++ b/perigee_first.cfg
@@ -1,7 +1,7 @@
 NODES                    1000
 CYCLE                    100000   # One block per cycle
 ROUND                    100      # One calibration per round (counted in cycles)
-BLOCKS                   12800
+BLOCKS                   12869
 
 EXTRA_TCP_TRIPS          0
 TH                       0   # msec to process header
@@ -12,7 +12,7 @@ SPOT_LATENCY             2   # latency between nodes at same location (msec)
 D                        8   # Degree
 W                        2   # How many weakest links to replace
 
-LOGFILE                  prg
+LOGFILE                  prg_f
 engine.mode              sim
 #engine.duration          0
 random.seed              0
@@ -66,7 +66,8 @@ include.init             latencies_matrix
 
 init.latencies_matrix    MatrixParser
 {
-  file                   wondernetwork_latencies.dat
+  file                   wondernetwork_latencies_oneway_2022-02-08.dat
+  #file                   wondernetwork_latencies.dat
   #file                   iohk_testbed_latencies.dat
   trace_ticks_per_sec    1000
   ticks_per_sec          1000
