BaseDissemination: add header_only => entire block transferred in a single go

--- a/cr.cfg
+++ b/cr.cfg
@@ -2,7 +2,7 @@ NODES                    1000
 CYCLE                    100000
 BLOCKS                   1000
 
-EXTRA_TCP_TRIPS          3
+EXTRA_TCP_TRIPS          0
 TH                       5   # msec to process header
 TB                       45  # msec to process body
 
@@ -32,7 +32,8 @@ protocol.diss            prot.CR
 
   header_validation_time TH
   body_validation_time   TB
-  extra_tcp_trips        EXTRA_TCP_TRIPS              
+  extra_tcp_trips        EXTRA_TCP_TRIPS
+  header_only            true
 
   transport              cardano
 }
