--- a/perigee_subset.cfg
+++ b/perigee_subset.cfg
@@ -34,6 +34,7 @@ protocol.diss            prot.PerigeeSubset
   header_validation_time TH
   body_validation_time   TB
   extra_tcp_trips        EXTRA_TCP_TRIPS
+  header_only            true
 
   outgoing               D
   incoming               20
