Support multiple body pull requests

--- a/cr.cfg
+++ b/cr.cfg
@@ -2,14 +2,15 @@ NODES                    1000
 CYCLE                    100000
 BLOCKS                   1000
 
-EXTRA_TCP_TRIPS          0
+EXTRA_TCP_TRIPS          3
 TH                       5   # msec to process header
 TB                       45  # msec to process body
+BODY                     3
 
 SPOT_LATENCY             2   # latency between nodes at same location (msec)
 
-C                        8
-R                        8
+C                        4
+R                        4
 CD                       0   # How many of the close links should be downstream
 RD                       0   # How many of the random links should be downstream
 
@@ -33,7 +34,8 @@ protocol.diss            prot.CR
   header_validation_time TH
   body_validation_time   TB
   extra_tcp_trips        EXTRA_TCP_TRIPS
-  header_only            true
+  header_only            false
+  body_requests          BODY
 
   transport              cardano
 }
@@ -75,8 +77,9 @@ init.cr_init             prot.InitializerCR
   protocol               diss
   c                      C
   r                      R
-  c_down                  CD
-  r_down                  RD
+  #c_down                  CD
+  #r_down                  RD
+  undir                  true
 }
 
 init.static_topo         cr.InitializerStatic
