Quick & dirty fix of Stats.java for logging per calibration period

--- a/cfg/perigee_subset_only.cfg
+++ b/cfg/perigee_subset_only.cfg
@@ -41,6 +41,8 @@ protocol.diss            prot.PerigeeSubset
   weakest_links          W
   round                  ROUND             # every how many blocks to calibrate
 
+  body_requests          D
+
   transport              deltaQ
 }
 
@@ -68,7 +70,7 @@ include.init             latencies_matrix
 init.latencies_matrix    MatrixParser
 {
 #   file                   plane_half_20
-  file                   perigee.dat
+  file                   latencies/perigee_latencies_weight1.dat
   #file                   iohk_testbed_latencies.dat
   trace_ticks_per_sec    1000
   ticks_per_sec          1000
