Update config files

--- a/cfg/cr.cfg
+++ b/cfg/cr.cfg
@@ -1,5 +1,5 @@
 NODES                    1000
-CYCLE                    100000
+CYCLE                    20000
 BLOCKS                   1000
 
 EXTRA_TCP_TRIPS          0
@@ -13,7 +13,7 @@ R                        5
 CD                       0   # How many of the close links should be downstream
 RD                       0   # How many of the random links should be downstream
 
-LOGFILE                  cr
+LOGFILE                  c5r5
 engine.mode              sim
 #engine.duration          0
 random.seed              0
@@ -33,10 +33,10 @@ protocol.diss            prot.CR
   header_validation_time TH
   body_validation_time   TB
   extra_tcp_trips        EXTRA_TCP_TRIPS
-  header_only            true
+  header_only            false
 
   body_requests          C+R
-  transport              cardano
+  transport              deltaQ
 }
 
 
@@ -45,7 +45,7 @@ protocol.diss            prot.CR
 #   TRANSPORT   #
 #################
 
-transport.cardano        TransportDeltaQ
+transport.deltaQ        TransportDeltaQ
 
 
 
@@ -78,27 +78,7 @@ init.cr_init             prot.InitializerCR
   r                      R
   c_down                  CD
   r_down                  RD
-  undir                  false
-}
-
-init.static_topo         cr.InitializerStatic
-{
-  protocol               diss
-  topology               topology.dat
-}
-
-
-
-# edgeOrientation:
-# direct (pushBased)
-# revert (subscriptionBased)
-# bidirectional
-
-init.wireCRPeers      VParser
-{
-  protocol            diss
-  edgeOrientation     subscriptionBased
-  crsDegrees          5_5_0
+  undir                  true
 }
 
 
