--- a/cfg/perigee_subset_hybr.cfg
+++ b/cfg/perigee_subset_hybr.cfg
@@ -12,7 +12,7 @@ SPOT_LATENCY             0   # latency between nodes at same location (msec)
 D                        6   # Degree
 W                        2   # How many weakest links to replace
 
-LOGFILE                  hybr
+LOGFILE                  c4r2s4
 engine.mode              sim
 #engine.duration          0
 random.seed              0
@@ -34,13 +34,14 @@ protocol.diss            prot.PerigeeSubset
   header_validation_time TH
   body_validation_time   TB
   extra_tcp_trips        EXTRA_TCP_TRIPS
-  header_only            true
+  header_only            false
 
   outgoing               D
   incoming               10000
   weakest_links          W
   round                  ROUND             # every how many blocks to calibrate
 
+  body_requests          10
   transport              deltaQ
 }
 
@@ -68,7 +69,7 @@ include.init             latencies_matrix, cr_init
 init.latencies_matrix    MatrixParser
 {
 #   file                   plane_half_20
-  file                   perigee.dat
+  file                   latencies/perigee_latencies_weight1.dat
   #file                   iohk_testbed_latencies.dat
   trace_ticks_per_sec    1000
   ticks_per_sec          1000
@@ -80,6 +81,9 @@ init.cr_init             prot.InitializerCR
   protocol               diss
   c                      4
   r                      0
+  c_down                  CD
+  r_down                  RD
+  undir                  true
 }
 
 init.prg_init            prot.InitializerPRG
