--- a/cfg/perigee_subset_only.cfg
+++ b/cfg/perigee_subset_only.cfg
@@ -12,7 +12,7 @@ SPOT_LATENCY             0   # latency between nodes at same location (msec)
 D                        10   # Degree
 W                        1   # How many weakest links to replace
 
-LOGFILE                  prg_s
+LOGFILE                  r1s9
 engine.mode              sim
 #engine.duration          0
 random.seed              0
@@ -34,7 +34,7 @@ protocol.diss            prot.PerigeeSubset
   header_validation_time TH
   body_validation_time   TB
   extra_tcp_trips        EXTRA_TCP_TRIPS
-  header_only            true
+  header_only            false
 
   outgoing               D
   incoming               10000
