Updated config files: unified cfg for Perigee (C0S8R2) and Hybr (C4S4R2)

--- a/cfg/cr.cfg
+++ b/cfg/cr.cfg
@@ -1,12 +1,12 @@
 NODES                    1000
-CYCLE                    100000
+CYCLE                    20000
 BLOCKS                   1000
 
 EXTRA_TCP_TRIPS          0
 TH                       5   # msec to process header
 TB                       50  # msec to process body
 
-SPOT_LATENCY             0   # latency between nodes at same location (msec)
+SPOT_LATENCY             2   # latency between nodes at same location (msec)
 
 C                        5
 R                        5
@@ -36,7 +36,7 @@ protocol.diss            prot.CR
   header_only            true
 
   body_requests          C+R
-  transport              cardano
+  transport              deltaQ
 }
 
 
@@ -45,7 +45,7 @@ protocol.diss            prot.CR
 #   TRANSPORT   #
 #################
 
-transport.cardano        TransportDeltaQ
+transport.deltaQ        TransportDeltaQ
 
 
 
@@ -62,7 +62,8 @@ include.init             latencies_matrix, cr_init
 
 init.latencies_matrix    MatrixParser
 {
-  file                   latencies/perigee_latencies_weight1.dat
+  #file                   latencies/perigee_latencies_weight1.dat
+  file                   latencies/wondernetwork_latencies_oneway_2022-02-08.dat
   #file                   wondernetwork_latencies.dat
   #file                   iohk_testbed_latencies.dat
   trace_ticks_per_sec    1000
@@ -78,7 +79,7 @@ init.cr_init             prot.InitializerCR
   r                      R
   c_down                  CD
   r_down                  RD
-  undir                  false
+  undir                  true
 }
 
 init.static_topo         cr.InitializerStatic
