--- a/cfg/perigee_subset.cfg
+++ b/cfg/perigee_subset.cfg
@@ -7,12 +7,16 @@ EXTRA_TCP_TRIPS          0
 TH                       5   # msec to process header
 TB                       50   # msec to process body
 
-SPOT_LATENCY             0   # latency between nodes at same location (msec)
+SPOT_LATENCY             2   # latency between nodes at same location (msec)
 
-D                        10   # Degree
-W                        1   # How many weakest links to replace
+# Note that the degree in Perigee terminology is now S+R.
+# However, the real degree of a node is C+S+R.
+# Essentially, Perigee maintains S+R outgoing links, which it scores, and in each calibration replaces the R weakest ones.
+C                        4   # num close neighbors  (set C=0 for pure perigee)
+S                        4   # num score-based neighbors
+R                        2   # num random neighbors (replacing weakest links)
 
-LOGFILE                  prg_s
+LOGFILE                  hybr
 engine.mode              sim
 #engine.duration          0
 random.seed              0
@@ -36,13 +40,12 @@ protocol.diss            prot.PerigeeSubset
   extra_tcp_trips        EXTRA_TCP_TRIPS
   header_only            true
 
-  outgoing               D
+  outgoing               S+R
   incoming               10000
-  weakest_links          W
+  weakest_links          R
   round                  ROUND             # every how many blocks to calibrate
 
-  body_requests          D
-
+  body_requests          C+S+R
   transport              deltaQ
 }
 
@@ -62,32 +65,29 @@ transport.deltaQ         TransportDeltaQ
 #   INITIALIZERS   #
 ####################
 
-include.init             latencies_matrix
+include.init             latencies_matrix, cr_init
 #include.init             latencies_matrix, static_topo
 #include.init             wireCRPeers
 
 
 init.latencies_matrix    MatrixParser
 {
-#   file                   plane_half_20
-  file                   latencies/perigee_latencies_weight1.dat
+  #file                   plane_half_20
+  #file                   latencies/perigee_latencies_weight1.dat
+  file                   latencies/wondernetwork_latencies_oneway_2022-02-08.dat
   #file                   iohk_testbed_latencies.dat
   trace_ticks_per_sec    1000
   ticks_per_sec          1000
   min                    SPOT_LATENCY
 }
 
+# Initialize each node with C close bidirectional links only, no random links
 init.cr_init             prot.InitializerCR
 {
   protocol               diss
   c                      C
-  r                      R
-}
-
-init.prg_init            prot.InitializerPRG
-{
-  protocol               diss
-  r                      R
+  r                      0
+  undir                  true
 }
 
 
