Separate perigee (iPlane) latencies: oneway and RTT versions

--- a/cfg/cr.cfg
+++ b/cfg/cr.cfg
@@ -33,7 +33,7 @@ protocol.diss            prot.CR
   header_validation_time TH
   body_validation_time   TB
   extra_tcp_trips        EXTRA_TCP_TRIPS
-  header_only            true
+  header_only            false
 
   body_requests          C+R
   transport              deltaQ
@@ -62,7 +62,7 @@ include.init             latencies_matrix, cr_init
 
 init.latencies_matrix    MatrixParser
 {
-  #file                   latencies/perigee_latencies_weight1.dat
+  #file                   latencies/perigee_latencies_weight1_oneway.dat
   file                   latencies/wondernetwork_latencies_oneway_2022-02-08.dat
   #file                   wondernetwork_latencies.dat
   #file                   iohk_testbed_latencies.dat
