--- a/cfg/perigee_subset.cfg
+++ b/cfg/perigee_subset.cfg
@@ -38,7 +38,7 @@ protocol.diss            prot.PerigeeSubset
   header_validation_time TH
   body_validation_time   TB
   extra_tcp_trips        EXTRA_TCP_TRIPS
-  header_only            true
+  header_only            false
 
   outgoing               S+R
   incoming               10000
@@ -73,7 +73,7 @@ include.init             latencies_matrix, cr_init
 init.latencies_matrix    MatrixParser
 {
   #file                   plane_half_20
-  #file                   latencies/perigee_latencies_weight1.dat
+  #file                   latencies/perigee_latencies_weight1_oneway.dat
   file                   latencies/wondernetwork_latencies_oneway_2022-02-08.dat
   #file                   iohk_testbed_latencies.dat
   trace_ticks_per_sec    1000
