highly variable (but fixed!) processing time

--- a/cfg/cr.cfg
+++ b/cfg/cr.cfg
@@ -36,7 +36,7 @@ protocol.diss            prot.CR
   header_only            true
 
   body_requests          C+R
-  transport              deltaQ
+  transport              dQPlusProc
 }
 
 
@@ -46,6 +46,12 @@ protocol.diss            prot.CR
 #################
 
 transport.deltaQ        TransportDeltaQ
+
+transport.dQPlusProc     TransportDeltaQPlusProcessing
+{
+  processingMin          30
+  processingMax          300
+}
 
 
 
@@ -86,20 +92,6 @@ init.static_topo         cr.InitializerStatic
 {
   protocol               diss
   topology               topology.dat
-}
-
-
-
-# edgeOrientation:
-# direct (pushBased)
-# revert (subscriptionBased)
-# bidirectional
-
-init.wireCRPeers      VParser
-{
-  protocol            diss
-  edgeOrientation     subscriptionBased
-  crsDegrees          5_5_0
 }
 
 
