--- a/cfg/perigee_subset.cfg
+++ b/cfg/perigee_subset.cfg
@@ -46,7 +46,7 @@ protocol.diss            prot.PerigeeSubset
   round                  ROUND             # every how many blocks to calibrate
 
   body_requests          C+S+R
-  transport              deltaQ
+  transport              dQPlusProc
 }
 
 
@@ -55,9 +55,13 @@ protocol.diss            prot.PerigeeSubset
 #   TRANSPORT   #
 #################
 
-transport.deltaQ         TransportDeltaQ
+transport.deltaQ        TransportDeltaQ
 
-
+transport.dQPlusProc     TransportDeltaQPlusProcessing
+{
+  processingMin          30
+  processingMax          300
+}
 
 
 
