--- a/cfg/perigee_subset_scor.cfg
+++ b/cfg/perigee_subset_scor.cfg
@@ -1,19 +1,22 @@
 NODES                    1000
-CYCLE                    20000
-BLOCKS                   100
+CYCLE                    20000   # One block per cycle
+ROUND                    100      # One calibration per round (counted in cycles)
+BLOCKS                   12869
 
 EXTRA_TCP_TRIPS          0
 TH                       5   # msec to process header
-TB                       50  # msec to process body
+TB                       50   # msec to process body
 
 SPOT_LATENCY             2   # latency between nodes at same location (msec)
 
-C                        5
-R                        5
-CD                       0   # How many of the close links should be downstream
-RD                       0   # How many of the random links should be downstream
+# Note that the degree in Perigee terminology is now S+R.
+# However, the real degree of a node is C+S+R.
+# Essentially, Perigee maintains S+R outgoing links, which it scores, and in each calibration replaces the R weakest ones.
+C                        0   # num close neighbors  (set C=0 for pure perigee)
+S                        8   # num score-based neighbors
+R                        2   # num random neighbors (replacing weakest links)
 
-LOGFILE                  cr
+LOGFILE                  scor
 engine.mode              sim
 #engine.duration          0
 random.seed              0
@@ -26,16 +29,23 @@ network.size             NODES
 ###################################
 
 
-protocol.diss            prot.CR
+protocol.diss            prot.PerigeeSubset
 {
   peer                   Peer
+
+  step                   ROUND * CYCLE     # calibration period, through nextCycle()
 
   header_validation_time TH
   body_validation_time   TB
   extra_tcp_trips        EXTRA_TCP_TRIPS
   header_only            false
 
-  body_requests          C+R
+  outgoing               S+R
+  incoming               10000
+  weakest_links          R
+  round                  ROUND             # every how many blocks to calibrate
+
+  body_requests          C+S+R
   transport              dQPlusProc
 }
 
@@ -55,8 +65,6 @@ transport.dQPlusProc     TransportDeltaQPlusProcessing
 
 
 
-
-
 ####################
 #   INITIALIZERS   #
 ####################
@@ -70,28 +78,19 @@ init.latencies_matrix    MatrixParser
 {
   #file                   latencies/perigee_latencies_weight1.dat
   file                   latencies/wondernetwork_latencies_oneway_2022-02-08.dat
-  #file                   wondernetwork_latencies.dat
   #file                   iohk_testbed_latencies.dat
   trace_ticks_per_sec    1000
   ticks_per_sec          1000
   min                    SPOT_LATENCY
 }
 
-
+# Initialize each node with C close bidirectional links only, no random links
 init.cr_init             prot.InitializerCR
 {
   protocol               diss
   c                      C
-  r                      R
-  c_down                  CD
-  r_down                  RD
+  r                      0
   undir                  true
-}
-
-init.static_topo         cr.InitializerStatic
-{
-  protocol               diss
-  topology               topology.dat
 }
 
 
@@ -110,12 +109,14 @@ control.mining          BlockGeneration
 {
   protocol              diss
   step                  CYCLE
+  skip                  ROUND
   blocks                BLOCKS
 }
 
 control.stats           Stats
 {
   protocol              diss
+  step                  ROUND * CYCLE
   final
 }
 
