resolve merge conflict

--- a/cfg/perigee_subset.cfg
+++ b/cfg/perigee_subset.cfg
@@ -46,6 +46,7 @@ protocol.diss            prot.PerigeeSubset
   round                  ROUND             # every how many blocks to calibrate
 
   body_requests          C+S+R
+
   transport              deltaQ
 }
 
@@ -86,9 +87,15 @@ init.cr_init             prot.InitializerCR
 {
   protocol               diss
   c                      C
-  r                      0
+  r                      R
   undir                  true
 }
+
+#init.prg_init            prot.InitializerPRG
+#{
+#  protocol               diss
+#  r                      S
+#}
 
 
 
