TransportProcessing extends Transport

--- a/cfg/cr.cfg
+++ b/cfg/cr.cfg
@@ -36,7 +36,7 @@ protocol.diss            prot.CR
   header_only            false
 
   body_requests          C+R
-  transport              dQPlusProc
+  transport              proc
 }
 
 
@@ -47,7 +47,7 @@ protocol.diss            prot.CR
 
 transport.deltaQ        TransportDeltaQ
 
-transport.dQPlusProc     TransportDeltaQPlusProcessing
+transport.proc     TransportProcessing
 {
   processingMin          30
   processingMax          300
@@ -62,8 +62,6 @@ transport.dQPlusProc     TransportDeltaQPlusProcessing
 ####################
 
 include.init             latencies_matrix, cr_init
-#include.init             latencies_matrix, static_topo
-#include.init             wireCRPeers
 
 
 init.latencies_matrix    MatrixParser
@@ -83,12 +81,6 @@ init.cr_init             prot.InitializerCR
   c_down                  CD
   r_down                  RD
   undir                  true
-}
-
-init.static_topo         cr.InitializerStatic
-{
-  protocol               diss
-  topology               topology.dat
 }
 
 
