--- a/cfg/perigee_subset_hybr.cfg
+++ b/cfg/perigee_subset_hybr.cfg
@@ -46,7 +46,7 @@ protocol.diss            prot.PerigeeSubset
   round                  ROUND             # every how many blocks to calibrate
 
   body_requests          C+S+R
-  transport              dQPlusProc
+  transport              proc
 }
 
 
@@ -57,7 +57,7 @@ protocol.diss            prot.PerigeeSubset
 
 transport.deltaQ        TransportDeltaQ
 
-transport.dQPlusProc     TransportDeltaQPlusProcessing
+transport.proc     TransportProcessing
 {
   processingMin          30
   processingMax          300
