--- a/cfg/cr.cfg
+++ b/cfg/cr.cfg
@@ -36,7 +36,7 @@ protocol.diss            prot.CR
   header_only            false
 
   body_requests          C+R
-  transport              proc
+  transport              fail
 }
 
 
@@ -51,6 +51,11 @@ transport.proc     TransportProcessing
 {
   processingMin          30
   processingMax          300
+}
+
+transport.fail     TransportFailures
+{
+  failures          10
 }
 
 
