--- a/cfg/perigee_subset_hybr.cfg
+++ b/cfg/perigee_subset_hybr.cfg
@@ -46,7 +46,7 @@ protocol.diss            prot.PerigeeSubset
   round                  ROUND             # every how many blocks to calibrate
 
   body_requests          C+S+R
-  transport              proc
+  transport              fail
 }
 
 
@@ -61,6 +61,11 @@ transport.proc     TransportProcessing
 {
   processingMin          30
   processingMax          300
+}
+
+transport.fail     TransportFailures
+{
+  failures          10
 }
 
 
